--- a/styles.css
+++ b/styles.css
@@ -4,4 +4,56 @@
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.5rem;
+    outline: 1px solid khaki;
+    /* border: 1px solid black; */
+}
+
+html {
+    background-color: gray;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 0 1 auto;
+    padding: 0;
+    margin: 0;
+}
+
+.container > div {
+    width: 50px;
+    height: 50px;
+
+}
+
+.container.default > div:hover {
+    border: 1px dotted black;
+}
+
+.container {
+    margin: 30px;
+    width: 800px;
+    height: 800px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: white;
+}
+
+.red {
+    background-color: red;
+}
+
+.input-container {
+    display: flex;
+    justify-content: center;
+}
+
+.grid-size {
+    flex: 1 1 0;
+}
+
+.color-play {
+    flex: 1 1 0;
 }
