--- a/styles.css
+++ b/styles.css
@@ -22,15 +22,15 @@ body {
     margin: 0;
 }
 
-.container > div {
+.container.default > div {
     width: 50px;
     height: 50px;
 
 }
 
-.container.default > div:hover {
+/* .container.default > div:hover {
     border: 1px dotted black;
-}
+} */
 
 .container {
     margin: 30px;
