--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,10 @@
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.5rem;
-    /* outline: 1px solid red; */
 }
 
 html {
-    background-color: gray;
+    background-color: rgb(59, 172, 247);
 }
 
 body {
@@ -33,6 +32,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     background-color: white;
+    border-radius: 15px;
 }
 
 .red {
@@ -40,12 +40,14 @@ body {
 }
 
 .input-container {
-    margin-top: 30px;
+    margin: 30px 0;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    
+    background-color: lightblue;
+    padding: 20px 10px;
     gap: 20px;
+    border-radius: 15px;
 }
 
 .grid-size {
@@ -60,12 +62,20 @@ body {
 
 #shadowing,
 #rainbow {
+    margin-top: 4px;
     width: 25px;
     height: 25px;
 }
 
 #textbox {
-    width: 150px;
+    width: 253px;
+    border-radius: 15px;
+    font-weight: 100;
+}
+#textbox::-webkit-input-placeholder {
+    color: black;
+    opacity: 0.2;
+    text-align: center;
 }
 
 .buttons {
@@ -73,6 +83,19 @@ body {
     justify-content: center;
     gap: 20px;
     margin-top: 10px;
+}
+
+#button-submit,
+#button-reset {
+    border-radius: 15px;
+    padding: 3px 10px;
+    background-color: #b4dfee;
+    cursor: pointer;
+}
+
+#button-submit:hover,
+#button-reset:hover {
+    background-color: aliceblue;
 }
 
 .option {
@@ -89,4 +112,13 @@ body {
     justify-content: center;
     align-items: center;
     gap: 10px;
+}
+
+#fav-color {
+    border-style: hidden;
+    background-color: #add8e6;
+    padding: 0;
+    margin: 0;
+    width: 30px;
+    height: 33px;
 }
